[package]
name = "cfs_rust_amalgamated"
version = "0.1.0"
edition = "2021"

[dependencies]
autocfg = "=1.2.0"
c2rust-bitfields = "0.18.0"
cc = "=1.0.90"
f128 = "=0.2.9"
f128_input = "=0.2.1"
f128_internal = "=0.2.2"
libc = "=0.2.153"
memoffset = "=0.9.1"
num-traits = "=0.2.18"
proc-macro2 = "=1.0.79"
quote = "=1.0.35"
syn = "=1.0.109"
unicode-ident = "=1.0.12"
